# ai-hunger-games

./: .env.example  .gitignore  README.md  alembic.ini  fix_css.js  main.py  pyproject.toml
.ai-hunger-games-backups/20260724T105835Z/frontend/src/: App.tsx
.ai-hunger-games-backups/20260724T110154Z-background-hotfix/: api.py
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ArenaView.tsx  ExperimentSidebar.tsx  LineageTab.tsx  NewExperimentDialog.test.tsx  NewExperimentDialog.tsx  OverviewTab.tsx  RelationshipsTab.tsx  RoundsTab.test.tsx  RoundsTab.tsx  ShowcaseTab.test.tsx  ShowcaseTab.tsx  common.tsx
frontend/src/lib/: arenaTimeline.test.ts  arenaTimeline.ts  format.ts  selection.test.ts  selection.ts  useGenerationRun.test.tsx  useGenerationRun.ts
migrations/: env.py
migrations/versions/: 0001_create_game_schema.py  0002_add_final_population_snapshot.py  0003_enforce_unique_game_generation.py  0004_backfill_final_population_snapshots.py  0005_add_game_randomization_metadata.py  0006_add_experiment_scoping.py  0007_add_answer_failure_telemetry.py  0008_require_scoped_game_records.py  0009_snapshot_experiment_definitions.py  0010_enforce_experiment_name_uniqueness.py  0011_add_generation_runs.py
src/ai_hunger_games/: analysis.py  api.py  api_schemas.py  database.py  database_setup.py  db_models.py  engine.py  experiment_definitions.py  generations.py  groq_providers.py  history.py  main.py  models.py  providers.py  repositories.py  run_repository.py  sample_data.py  settings.py  terminal.py
src/ai_hunger_games/web/: index.html
tests/: test_analysis.py  test_api.py  test_background_runs.py  test_engine.py  test_generations.py  test_groq_providers.py  test_repositories.py  test_vote_provider.py
(+69 files in other folders)
