[project]
name = "ai-hunger-games"
version = "0.1.0"
description = "A multi-agent LLM voting and evolution simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "groq>=1.5.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_hunger_games"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
